# reasonify

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  package.json  pyproject.toml  svelte.config.js  uno.config.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: js.yml  py.yml  spelling.yml
reasonify-headless/: bridge.pyi  load.py
reasonify-headless/api/: fs.py
reasonify-headless/reasonify/: __init__.py
reasonify-headless/reasonify/core/: __init__.py  api.py  loop.py  step1.py  step2.py  step3.py  step4.py
reasonify-headless/reasonify/examples/: __init__.py  async.yaml  date.yaml  dir.yaml  file.yaml  search.yaml  simple_ask.yaml
reasonify-headless/reasonify/models/: shot.py  tool.py
reasonify-headless/reasonify/templates/: __init__.py  chat.j2  main.j2  showTools.j2  step1.j2  step1schema.ts  step2.j2  step2schema.ts  step3.j2  step3schema.ts  step4a.j2  step4b.j2  step4bschema.ts
reasonify-headless/reasonify/tools/: __init__.py  fetch.py  input.py  install.py
reasonify-headless/reasonify/utils/: component.py  context.py  event.py  globals.py  html.py  inject.py  queue.py  resolve.py  run.py  serialize.py  tool.py
reasonify-headless/utils/: ask.py  fs.py  to_js.py
src/: app.d.ts  app.html
src/lib/: chat.ts  stores.ts  types.ts
src/lib/components/: Chat.svelte  Highlight.svelte  Intro.svelte  Markdown.svelte  Modal.svelte  md.css
src/lib/components/snapshots/: Hr.svelte  Python.svelte  index.ts  step1.svelte  step2.svelte  step3.svelte  step4.svelte
src/lib/py/: api.ts  chain.ts  common.ts  fs.ts  generate.ts  globals.ts  index.ts  load.py  load.ts  requirements.ts  version.ts
src/lib/stores/: icon.ts  index.ts  readiness.ts
src/lib/tools/: index.ts
src/lib/tools/ask/: index.ts  schema.ts
src/lib/tools/python/: index.ts  run.py  schema.ts
src/lib/utils/: cache.ts  format.ts  iter.ts  toast.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  LoadingItem.svelte
src/routes/api/chat/: +server.ts
src/routes/api/proxy/: +server.ts
src/routes/demo/: +page.svelte  QR.svelte
