[project]
name = "reasonify-headless"
description = "headless implementation for the Reasonify Agent"
license = { text = "MIT" }
dynamic = [ "version" ]
requires-python = ">=3.12"
authors = [ { name = "Muspi Merol", email = "me@promplate.dev" } ]
readme = "README.md"
dependencies = [
  "useful-coderunner~=1.0 ; sys_platform != 'emscripten'",
  "promplate>=0.3.4.7,<0.3.6.0",
  "promptools[validation]~=0.1.3.4",
  "promplate-recipes>=0.2.2.1,<0.2.4.0",
  "pyyaml~=6.0.1",
  "html-text~=0.6.2",
  "html2text2~=1.0",
  "isomorphic-fetch~=0.0.0.0.dev2",
]

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[tool.pdm]
build = { package-dir = "reasonify-headless" }
version = { source = "file", path = "reasonify-headless/version.py" }
distribution = true

[dependency-groups]
dev = [
  "pre-commit>=4.1",
  "black>=25.1",
  "isort>=6.0",
  "ruff>=0.9",
  "watchfiles>=1.0",
  "micropip>=0.8,<0.10",
  "webtypy~=0.1.7",
  "python-slugify~=8.0.4",
  "pyodide-py==0.27.7",
]

[tool.pdm.scripts]
fmt = { composite = [
  "ruff check --fix --exit-zero",
  "isort .",
  "black ."
] }
dev = { cmd = [
  "watchfiles",
  "pdm build --no-sdist -d static/whl",
  "reasonify-headless",
] }

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150

[tool.pyright]
typeCheckingMode = "standard"
reportMissingModuleSource = false
